--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
 
     defaultConfig {
         applicationId "com.saberi.myenglishnewsagency"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -57,9 +57,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 
-//    Intent library
+//
+    implementation 'androidx.multidex:multidex:2.0.1'
+//    def multidex_version = "2.0.1"
+//    implementation "androidx.multidex:multidex:$multidex_version"
 
-//    implementation 'fr.tvbarthel.intentshare:library:0.0.4'
+//    implementation 'com.android.support:multidex:1.0.1'
+//     googel admob
+
+    implementation 'com.google.android.gms:play-services-ads:19.7.0'
 
 
 }
