--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET " />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE " />
 
+    <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+
 
     <application
 
@@ -19,7 +21,9 @@
 
         >
 
-
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-1981355908194102~2792672342"/>
         <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
         <provider
             android:name="androidx.core.content.FileProvider"
