--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
 
+<!--    ca-app-pub-3940256099942544~3347511713-->
 
     <application
 
